<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Being simple text views and button layout, using linearLayout as a root tag-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="36dp"
            tools:context=".InstructionsFragment">

            <TextView
                style="@style/textStyle"
                android:id="@+id/first_instruction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_instruction_text"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="32dp" />

            <TextView
                style="@style/textStyle"
                android:id="@+id/second_instruction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_instruction_text"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="56dp" />

            <Button
                android:id="@+id/shoe_list_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/instructions_button" />
        </LinearLayout>
    </ScrollView>

</layout>