<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.udacity.shoestore.models.Converter" />

        <variable
            name="shoeViewModel"
            type="com.udacity.shoestore.models.ShoeViewModel" />
    </data>

    <ScrollView
        android:id="@+id/shoe_detail_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <!--Using Constraint layout to deal with multiple text and edit fields which also helps
        in responsiveness of the layout in orientation changes-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/detail_layout_padding"
            tools:context=".ShoeDetailFragment">

            <TextView
                android:id="@+id/shoe_name"
                style="@style/labelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoe_name_label"
                app:layout_constraintBottom_toBottomOf="@+id/shoe_name_text"
                app:layout_constraintEnd_toStartOf="@+id/shoe_name_text"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/shoe_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/detail_edit_start_margins"
                android:layout_marginBottom="@dimen/detail_edit_bottom_margins"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@={shoeViewModel.shoeName}"
                app:layout_constraintBottom_toTopOf="@+id/comapny_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@+id/barrier2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.29000002"
                app:layout_constraintVertical_chainStyle="packed"
                tools:ignore="Autofill,LabelFor" />

            <TextView
                android:id="@+id/company"
                style="@style/labelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoe_company_label"
                app:layout_constraintBottom_toBottomOf="@+id/comapny_text"
                app:layout_constraintEnd_toStartOf="@+id/comapny_text"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/comapny_text" />

            <EditText
                android:id="@+id/comapny_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/detail_edit_start_margins"
                android:layout_marginBottom="@dimen/detail_edit_bottom_margins"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@={shoeViewModel.shoeCompany}"
                app:layout_constraintBottom_toTopOf="@+id/shoe_size_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toEndOf="@+id/barrier2"
                app:layout_constraintTop_toBottomOf="@+id/shoe_name_text"
                tools:ignore="Autofill,LabelFor" />

            <TextView
                android:id="@+id/shoe_size"
                style="@style/labelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoe_size_label"
                app:layout_constraintBottom_toTopOf="@+id/description_text"
                app:layout_constraintEnd_toStartOf="@+id/shoe_size_text"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/shoe_size_text" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="end"
                app:constraint_referenced_ids="shoe_name,company,shoe_size,description"
                tools:layout_editor_absoluteX="129dp" />

            <TextView
                android:id="@+id/description"
                style="@style/labelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_label"
                app:layout_constraintBottom_toBottomOf="@+id/description_text"
                app:layout_constraintEnd_toStartOf="@+id/description_text"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/description_text" />

            <EditText
                android:id="@+id/description_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/detail_edit_start_margins"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:text="@={shoeViewModel.shoeDescription}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toEndOf="@+id/barrier2"
                app:layout_constraintTop_toBottomOf="@+id/shoe_size_text"
                tools:ignore="Autofill,LabelFor" />

            <EditText
                android:id="@+id/shoe_size_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/detail_edit_start_margins"
                android:layout_marginBottom="@dimen/detail_edit_bottom_margins"
                android:ems="4"
                android:inputType="numberDecimal"
                android:text="@={Converter.doubleToString(shoeViewModel.shoeSize)}"
                app:layout_constraintBottom_toTopOf="@+id/description_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.15"
                app:layout_constraintStart_toEndOf="@+id/barrier2"
                app:layout_constraintTop_toBottomOf="@+id/comapny_text"
                tools:ignore="Autofill,LabelFor" />

            <Button
                android:id="@+id/cancel"
                style="@style/button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> shoeViewModel.clicksCancel()}"
                android:text="@string/cancel_button"
                app:layout_constraintEnd_toStartOf="@+id/save"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/save" />

            <Button
                android:id="@+id/save"
                style="@style/button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/detail_button_margin"
                android:onClick="@{() -> shoeViewModel.addNewShoe()}"
                android:text="@string/save_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cancel"
                app:layout_constraintTop_toBottomOf="@+id/description_text"
                app:layout_constraintVertical_bias="0.39" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>